# Local-SQL-RAG-Agent

./: README.md  pyproject.toml
scripts/: setup_data.py
src/: main.py
src/db/: sqlite_handler.py
src/engine/: rag_controller.py  viz_generator.py
src/llm/: ollama_client.py
src/local_sql_rag_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vector/: chroma_store.py
