[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-sql-rag-agent"
version = "0.1.0"
description = "A privacy-first, local Business Intelligence agent using Llama-3 and RAG for SQL generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]
